<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/welcome"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:gravity="center"
       android:layout_marginTop="10dip"
       android:layout_marginBottom="20dip" />
    
    <Button
            android:id="@+id/btnBooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/booking" 
            android:onClick="onClick"
            android:layout_marginBottom="15dip" />
    
    <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/create"
       android:layout_margin="5dip" />   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/btnCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="onClick"
            android:text="@string/customer" />

        <Button
            android:id="@+id/btnRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            style="?android:attr/buttonBarButtonStyle"          
            android:text="@string/room" 
            android:onClick="onClick"/>
        
        <Button
            android:id="@+id/btnService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            style="?android:attr/buttonBarButtonStyle"         
            android:text="@string/service" 
            android:onClick="onClick"/>
        
    </LinearLayout>
    
    <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/show"
       android:layout_margin="5dip" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        style="?android:attr/buttonBarStyle" >

	   <Button
	            android:id="@+id/btnShowCustomers"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.5"
	            style="?android:attr/buttonBarButtonStyle"
	            android:text="@string/showAllCustomers" 
	            android:onClick="onClick"/>
	   
	   <Button
	            android:id="@+id/btnShowBookings"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.5"
	            style="?android:attr/buttonBarButtonStyle"
	            android:text="@string/showAllBookings" 
	            android:onClick="onClick"/>
   </LinearLayout>
   
</LinearLayout>