<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:text="@string/serviceType" />

	    <Spinner
	        android:id="@+id/serviceSpinner"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
	</LinearLayout>
	
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:text="@string/dateFrom" />
		
		    <EditText
		        android:id="@+id/dateFrom"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dip"
		        android:inputType="date"
		        android:cursorVisible="false" 
	        	android:focusable="false" 
	        	android:focusableInTouchMode="false"
	        	android:onClick="chooseDate" />
		</LinearLayout>
	
	    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        android:text="@string/dateTo" />
		
		    <EditText
		        android:id="@+id/dateTo"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dip"
		        android:inputType="date"
		        android:cursorVisible="false" 
	        	android:focusable="false" 
	        	android:focusableInTouchMode="false"
	        	android:onClick="chooseDate" />
		</LinearLayout>
	
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    style="?android:attr/buttonBarStyle" >
		    <Button
		        android:id="@+id/btnAddService"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dip"
		        style="?android:attr/buttonBarButtonStyle"
		        android:layout_weight="0.75"
		        android:onClick="add"
		        android:text="@string/addService" />
		    
		    <Button
		        android:id="@+id/btnNextScreen"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dip"
		        style="?android:attr/buttonBarButtonStyle"
		        android:layout_weight="0.25"
		        android:onClick="changeBack"
		        android:text="@string/back" />
	    </LinearLayout>
	    
    <ListView
	        android:id="@+id/addedElements"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="25dp" >
	    </ListView>

</LinearLayout>
